Fit game over text on mobile and fix an extra ! in spanish

--- a/app/Scenes/SimParts/gameOverOverlay.css
+++ b/app/Scenes/SimParts/gameOverOverlay.css
@@ -6,10 +6,6 @@
 	pointer-events: none;
 }
 
-.game-over-overlay .header {
-	font-size: 70px;
-}
-
 .game-over-overlay .middle {
 	font-size: 28px;
 }
